fix: fix bound issues that prevent functions to be called within the object. style: user inputs are aligned to the center

--- a/connect4.css
+++ b/connect4.css
@@ -38,6 +38,8 @@ input, button{
   border: none;
   font-family:Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
+  text-align: center;
+  display: flex;
 }
 
 button{
